<resources>
    <string name="app_name">Project</string>
    <string name="action_tracker">Activity Tracker</string>
    <string name="action_food">Food Information Tracker</string>
    <string name="action_house">House Thermostat</string>
    <string name="action_auto">Automobile</string>
    <string name="litres">Litres</string>
    <string name="price">Price</string>
    <string name="kilometers">Kilometers</string>
    <string name="date">Date</string>
    <string name="money">CAD</string>
    <string name="litres_unit">L</string>
    <string name="km">KM</string>
    <string name="empty">Please fill the blank</string>
    <string name="autoSave">Save</string>
    <string name="autoCancel">Cancel</string>
    <string name="autoDelete">Delete</string>
    <string name="insert_done">Insert Successful</string>
    <string name="update_done">Update Successful</string>
    <string name="delete_done">Delete Successful</string>
    <string name="delete_dialog_message">Are you sure you want delete it?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="last_avg_price">Last Month Avg Price</string>
    <string name="last_total_liters">Last Month Total Liters</string>
</resources>
