<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="cst2335group.project.PkgA.A_Update">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/auto_margin"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/litres" />

            <EditText
                android:inputType="number"
                android:id="@+id/editText_litres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/auto_margin"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/price" />

            <EditText
                android:inputType="number"
                android:id="@+id/editText_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/auto_margin"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/kilometers" />

            <EditText
                android:inputType="number"
                android:id="@+id/editText_kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/auto_margin"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date" />

            <EditText
                android:editable="false"
                android:id="@+id/editText_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:text="@string/autoSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="Save"
                android:layout_marginEnd="16dp"/>

            <Button
                android:text="@string/autoDelete"
                android:onClick="Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"/>

            <Button
                android:text="@string/autoCancel"
                android:onClick="Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
